# Armoricore

./: .env.example  API_REFERENCE.md  ARCHITECTURE.md  ARCRTC_PROTOCOL_SPECIFICATION.md  CHANGELOG.md  COMMERCIAL_LICENSE_README.md  CONFIGURATION.md  CONTRIBUTING.md  INSTALL.md  LICENSE  NOTICE  README.md  RELEASE_PREP_SUMMARY.md  SCRIPTS.md  SECURITY.md  SOURCE_PROTECTION_REPORT.md  advanced_watermarking.ex  apply_copyright_headers.sh  check_license_requirements.sh  code_watermarking_system.ex  create_test_data.exs  deploy_production.sh  docs.json  fuzz_report.html  fuzz_results.json  fuzz_test.js  install.sh  license_enforcement_system.ex  load_test.sh  monitor_db_connectivity.sh  monitor_production.sh  nats-server.conf  quick_security_test.sh  saas_gateway_system.ex  security_test.sh  setup_production.sh  simplified_license_enforcement.ex  ssl_setup.sh  start_all.sh  start_all_skip_rust.sh  (+10 more)
elixir_realtime/: .formatter.exs  mix.exs  test_nats.exs
elixir_realtime/config/: authorization.exs.example  config.exs  dev.exs  prod.exs  runtime.exs  test.exs
elixir_realtime/lib/: armoricore_realtime.ex  armoricore_realtime_web.ex
elixir_realtime/test/: integration_test.exs  security_test.exs  test_helper.exs
rust-services/: Cargo.toml
rust-services/live-ingest/: Cargo.toml
rust-services/live-ingest/src/: config.rs  error.rs  lib.rs  main.rs  recorder.rs  rtmp_server.rs  server.rs  stream_key_validator.rs  stream_manager.rs
rust-services/media-processor/: Cargo.toml
scripts/: migrate_keys_standalone.exs  migrate_keys_to_key_store.exs
tests/: Cargo.toml
(+242 files in other folders)
